:nail_care: Fix slight shift

--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -18,12 +18,11 @@
 }
 
 .herocardsWrapper {
-  /* padding: 0 var(--gap-med); */
+  margin: 0 auto;
+  display: flex;
 }
 
 .herocards {
-  /* display: grid;
-  grid-template-columns: 1fr 1fr 1fr; */
   display: flex;
   gap: var(--gap-med);
   max-width: 72rem;
@@ -37,6 +36,7 @@
 
 .card {
   flex-shrink: 0;
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -154,7 +154,6 @@
 
   .card {
     width: 20rem;
-    height: 100%;
   }
   .lastcard {
     padding-right: var(--gap-med);
